--- a/lab/index.html
+++ b/lab/index.html
@@ -7,6 +7,6 @@
     <title>Lab4</title>
 </head>
 <body>
-    <h1>Welcome to Lab 4 </h1>
+    <h1>Welcome to Lab 4, everything works! </h1>
 </body>
 </html>
